java_import(
    name = "junit",
    jars = [":JazzerTestEngine_deploy.jar"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "JazzerTestEngine",
    create_executable = False,
    resources = [
        "//agent/src/main/resources:jazzer_test_engine_service",
    ],
    runtime_deps = [
        ":annotations",
        ":engine",
    ],
)

java_library(
    name = "engine",
    srcs = [
        "JazzerFuzzTestDescriptor.java",
        "JazzerTestEngine.java",
    ],
    deps = [
        ":annotations",
        "//agent/src/main/java/com/code_intelligence/jazzer/api",
        "@maven//:org_junit_platform_junit_platform_commons",
        "@maven//:org_junit_platform_junit_platform_engine",
    ],
)

java_library(
    name = "annotations",
    srcs = [
        "FuzzTest.java",
    ],
    deps = [
        "@maven//:org_junit_platform_junit_platform_commons",
    ],
    visibility = ["//visibility:public"],
)
